--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -12,16 +12,16 @@ html
     script(src='d3.v3.min.js')
     link(rel='stylesheet', href='main.css')
     link(rel='stylesheet', href='animate.css')
-    link(rel='stylesheet', href='royalslider.css')
+    //link(rel='stylesheet', href='royalslider.css')
     link(rel='stylesheet', href='skins/minimal-white/rs-minimal-white.css')
     link(rel='stylesheet', href='alertify.core.css')
     link(rel='stylesheet', href='alertify.bootstrap.css')
     link(rel='stylesheet', href='jquery.nouislider.css')
     link(rel='stylesheet', href='chart.custom.css')
-    link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
   body
     // Background
-    #bg
+    //#bg
       .overlay-solid
     // Navigation Bar
     #bitsplitnav.navbar.transparent.navbar-fixed-top.navbar-inverse
@@ -52,9 +52,9 @@ html
     div.overlay-solid
     // Main Screen Slider
     section#gameslider
-      #bitsplitgames.royalSlider.rsMinW
+      #bitsplitgames
         // Slide 1
-        .row
+        .row-fluid
 
           .col-md-4.nosidemargin.rsNoDrag.hidden-xs
 
