--- a/public/views/sidebar.html
+++ b/public/views/sidebar.html
@@ -1,2 +1,1 @@
-
-<div id="sidebar" class="list-group"><a id="chat_toggle" href="#" class="list-group-item"><i class="fa fa-wechat fa-2x"></i><i class="chat-badge"></i></a><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a></div>
+<div id="sidebar" class="list-group"><a href="#" class="list-group-item"><i id="referral_icon" class="fa fa-btc fa-2x"></i></a><a href="#" class="list-group-item"><i id="volume_slider_icon" class="fa fa-volume-up fa-2x"></i><div id="volume_slider"></div></a><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a></div>
