Some UI Corrections

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -184,7 +184,7 @@ html
         //       h4.summarysmall.golden POTENTIAL NET
         //       h1.summarybig.lightyellow.text-right 34&period;0000
     // Betting Navigation
-    section.navbar-fixed-bottom.bitsplitbetnav
+    section#betnav.navbar-fixed-bottom.bitsplitbetnav
       .bigcounter
         
       .row
