--- a/public/views/sidebar.jade
+++ b/public/views/sidebar.jade
@@ -1,9 +1,13 @@
 div#sidebar.list-group
   a.list-group-item(href='#')
-    i.fa.fa-btc.fa-2x#referral_icon
+    i.fa.fa-bitcoin.fa-2x#referral_icon
   a.list-group-item(href='#')
     i.fa.fa-volume-up.fa-2x#volume_slider_icon
     #volume_slider
   a#account_show.list-group-item(href='#')
     i.fa.fa-lock.fa-2x
-
+  a.list-group-item(href='#past_winners_pane', data-toggle='pill')
+    i.fa.fa-trophy.fa-2x
+  a#chat_show.list-group-item(href='#chat_toggle2', data-toggle='pill')
+    i.number-badge.chat-badge
+    i.fa.fa-comments-o.fa-2x
