Smaller screen now says 'Minimum Bet' instead of 'Custom Bet'.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -170,7 +170,7 @@ html
             a.btn.btn-success(percentage="10") 10&percnt;
             a.btn.btn-success(percentage="5") 5&percnt;
             a.btn.btn-success(percentage="1") 1&percnt;
-            a.btn.btn-success(percentage="custom") Custom Bet
+            a.btn.btn-success(percentage="custom") Minimum Bet
 
 
 
