--- a/public/main.css
+++ b/public/main.css
@@ -12,7 +12,9 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-   /* padding-bottom: 271px;*/
+   
+    overflow: hidden;
+    /* padding-bottom: 271px;*/
 }
 #bg {
     position: fixed;
@@ -22,6 +24,7 @@ body {
     background-size: 100% auto;
     opacity: 0.0;
     min-height: 100%;
+    overflow: hidden;
 }
  #bg img {
      position: absolute;
@@ -34,7 +37,7 @@ body {
      min-height: 50%;
  }
 #bitsplitnav {
-    padding: 0 6% 0 0;
+    padding: 0 2% 0 0;
     margin-top: 3%;
     border: 0;
 }
@@ -87,7 +90,7 @@ body {
     padding-bottom: 0%;
     background: rgba(39, 20, 0, 0.33);
     padding-top: 0%;
-    bottom: 50px;
+    bottom: 42px;
 }
 div.navbar-header { margin-top: -30px}
 .dl-horizontal dt {
@@ -252,7 +255,7 @@ h2 {
     color: #FFEBA9;
     border: 1px dotted rgba(162, 162, 162, 0.39);
     padding: 7px;
-    margin-top: 10px;
+    margin-top: 7px;
 }
 .btcbet > input.form-control.input-lg {
     background: rgba(26, 26, 26, 0.19);
@@ -282,10 +285,10 @@ h1.summarybig.lightyellow.text-right {
 h4.summarysmall.golden.text-right {
     width: 100%;
     float: left;
-    font-size: 17px;
+    font-size: 15px;
     margin-top: 0PX;
     text-align: right;
-    color: #fff;
+    color: rgba(9, 33, 5, 0.53);
 }
 .montlarge {
     font-family: 'Montserrat', sans-serif;
@@ -440,7 +443,7 @@ p#chat_toggle {
     text-align: center;
 }
 a.my_user_name.welcome:not(:empty):before {
-    content: "Welcome back, ";
+    content: "Hi, ";
     color: white;
 }
 a.my_user_name.bet_greeting:not(:empty):before {
@@ -662,11 +665,11 @@ span.primary-font {
     background-color: #0066FF;
     color: #ffffff;
 }
-#no_participants { /* margin-left: 8%  */ color: #fff; clear: left; height: 95px; background: rgba(255, 255, 255, 1); width: 80%; margin: 0 auto;}
-#no_participants_msg { padding: 19px 10px; margin-bottom: 0px; font-size: 16px; color: rgba(149, 149, 149, 0.64); text-align: center;}
+#no_participants { /* margin-left: 8%  */ color: #fff; clear: left; height: 95px; background: rgba(1, 44, 37, 0.35); /* width: 80%; */ margin: 0 auto; border-radius: 7px;}
+#no_participants_msg { padding: 19px 10px; margin-bottom: 0px; font-size: 16px; color: rgba(255, 255, 255, 0.26); text-align: center;}
 .light-background { /* background: rgba(0, 0, 0, 0.24); */}
 #no_participants,
-#currentbets { display: none }
+#currentbets { display: none ; margin-top: 10px;}
 #volume_slider {
     position: absolute;
     left: 60px;
@@ -685,14 +688,15 @@ span.primary-font {
 footer {
     position: absolute;
     bottom: 0;
-    height: 50px;
+    height: 42px;
 }
 a.my_user_name.welcome {
     display: inline-block;
-    min-width: 100px;
+    /* min-width: 100px; */
     float: left;
     min-height: 34px;
-    margin-top: 10px;
+    margin-top: 12px;
+    font-size: 13px;
 }
 .bitbank > div.btn-group.btn-group.btn-group-justified.btn-group-transparent {
     display: inline-block;
@@ -728,6 +732,26 @@ width: 84%;
 margin: 0 auto;
 }
 
+
+ul.currentplayers li {
+    float: left;
+    width: 88%;
+    height: 34px;
+    margin-right: 3px;
+    background: rgba(8, 44, 38, 0.37);
+    border-radius: 2px;
+    padding: 7px;
+    overflow: hidden;
+    margin-bottom: 4px;
+    color: rgba(139, 234, 241, 0.65);
+}
+ul.currentplayers {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 10px;
+}
+
+
 /****************************************************************
  * Responsive Breakpoint Styles
 ****************************************************************/
@@ -747,16 +771,16 @@ margin: 0 auto;
         margin-top: 10px;
         width: 100%;
         float: left;
-        padding-left: 9%;
+        padding-left: 5%;
     }
      .bet_buttons .btn:not([percentage="custom"]):after {
          content: "of prize";
          font-weight: normal;
-         font-size: 11px;
+         font-size: 10px;
          opacity: 0.7;
          color: rgba(0, 0, 0, 0.76);
          position: absolute;
-         left: 50%;
+         left: 55%;
          bottom: 1px;
          margin-left: -28px;
      }
@@ -770,15 +794,33 @@ margin: 0 auto;
     
         letter-spacing: 0px;
 }
+
+.btcchance {
+padding: 2% 2%;
+background: rgba(0, 46, 38, 0.79);
+padding-top: 10px;
+color: rgba(219, 216, 138, 0.97);
+text-align: center;
+padding-bottom: 4px;
+font-size: 13px;
+text-transform: uppercase;
+font-weight: bold;
+}
+
     #bg { background-size: auto 100% }
     .bet_buttons > a.btn.btn-success:last-child { font-size: 14px }
     .bet_buttons > a.btn.btn-success {
-        font-size: 22px;
-        width: 30%;
-        padding: 0px 0px 10px 0px;
-        margin-bottom: 4px;
-        margin-right: 5px;
-    }
+        font-size: 18px;
+        width: 16%;
+        padding: 6px 0px 13px 0px;
+        margin-bottom: 3px;
+        margin-right: 0px;
+    
+        border-bottom: 2px solid rgba(0, 0, 0, 0.27);
+        border-left: 0px solid rgba(191, 216, 155, 0.78);
+        border-right: 2px solid rgba(0, 0, 0, 0.52);
+        font-weight: 100;
+}
     
     h4.summarysmall.golden.text-right {
 width: 100%;
@@ -802,6 +844,19 @@ margin-top: 0px;
 
 /*Phone and Ipad*/
 @media (min-width:768px) {
+    
+    h1.summarybig.lightyellow.text-right {
+        
+        font-size: 29px;
+        
+    }
+    
+    div.betchart svg {
+margin: 0 auto;
+margin-left: -16px !important;
+}
+    
+    
     .bet_buttons > a.btn.btn-success { font-size: 22px }
     img#logo { max-width: 290px }
     .bet_buttons > a.btn.btn-success:last-child {
@@ -842,6 +897,12 @@ margin-right: 0;
 
 /*Median Screen and Ipad*/
 @media (min-width:992px) { 
+
+    div.betchart svg {
+        
+        margin-left: -22px !important;
+    }
+
     .bet_buttons .btn:not([percentage="custom"]):after {
         content: "of prize";
         font-weight: normal;
@@ -865,6 +926,11 @@ margin-right: 0;
 
 /*Large Screen Minimum*/
 @media (min-width:1200px) {
+    
+    div.betchart svg {
+margin-left: auto !important;
+}
+    
     .bet_buttons .btn:not([percentage="custom"]):after {
         content: "of prize";
         font-weight: normal;
