Now past_winners_pane will toggle on icon click.

--- a/public/views/sidebar.jade
+++ b/public/views/sidebar.jade
@@ -6,8 +6,8 @@ div#sidebar.list-group
     #volume_slider
   a#account_show.list-group-item(href='#')
     i.fa.fa-lock.fa-2x
-  a.list-group-item(href='#past_winners_pane', data-toggle='pill')
+  a.list-group-item#past_winners_show
     i.fa.fa-trophy.fa-2x
-  a#chat_show.list-group-item(href='#chat_toggle2', data-toggle='pill')
+  a#chat_show.list-group-item
     i.number-badge.chat-badge
     i.fa.fa-comments-o.fa-2x
