Added referral program to menu.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -40,6 +40,8 @@ html
           //-   a.btn.btn-currency.fake.active(onclick="change_currency_type('fake')") SANDBOX
           //-   a.btn.btn-currency.btc(onclick="change_currency_type('btc')") BITCOINS
           li
+            a(href='#').referral_popup Referral Program
+          li
             a(href='#howitworks', data-toggle='modal', data-target='#howitworks') How It Works
           li
             a(href='#contact', data-toggle='modal', data-target='#contact') Contact
