--- a/public/views/sidebar.jade
+++ b/public/views/sidebar.jade
@@ -1,6 +1,6 @@
 div#sidebar.list-group
   a.list-group-item(href='#')
-    i.fa.fa-bitcoin.fa-2x#referral_icon
+    i.fa.fa-bitcoin.fa-2x#referral_icon.referral_popup
   a.list-group-item(href='#')
     i.fa.fa-volume-up.fa-2x#volume_slider_icon
     #volume_slider
